<resources>
    <string name="app_name">AndroidRetrofitAndOkHTTP</string>
    <string name="textTitle">Курс валют ПриватБанк</string>
    <string name="textBuyTitle">Придбати</string>
    <string name="textSaleTitle">Продати</string>
    <string name="textCurrentStartView">Курс валют</string>
    <string name="textConfertor">Конвертор</string>
    <string name="textAddValue">Введіть вашу суму</string>
    <string name="textBuyView">Придбати</string>
    <string name="textSellView">Обміняти</string>
    <string name="textUSDBtnView">USD</string>
    <string name="textEURBtnView">EUR</string>
    <string name="textPLNBtnView">PLN</string>
    <string name="textGBPBtnView">GBP</string>
    <string name="textRURBtnView">RUR</string>
    <string name="textBTCBtnView">BTC</string>
</resources>
